--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "sqlite3": "^5.0.0",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.3.19",
+    "ts-node": "^10.9.2"
   },
   "scripts": {
     "start": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
